Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50973

Changing orientation shrinks VideoOutput on Android when QQuickWidget is used

    XMLWordPrintable

Details

    • Android
    • dde86ebb9b020811a731a180c4f4d98f3b60728b, f12006e64405de72ac09f364ef25ee9701c9b755

    Description

      We have a standalone QQuickWidget and we show QML VideoOutput in it. Now when the screen is rotated for the first time the VideoOutput shrinks to cover only about 1/6 of the QQuickWidget and rotating again doesn't change it back to normal.

      We have a rectangle as a background and it shrinks as well. If we remove the VideoOutput item, the rectangle maintains its size correctly. Also if we add the QQuickWidget to QMainWindow, the problem is not reproducible.

      Tested on Android - we haven't verified with other platforms. Please find attached an example to reproduce (just run and rotate the device).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes